# opponent-adjusted-nba-stats-scraper

./: .gitignore  API.md  LICENSE  METHODOLOGY.md  README.md  examples.py  functions.txt  pyproject.toml  requirements.txt  setup.py
dans/data/: bball-ref-teams.csv  nba-stats-teams.csv
dans/endpoints/: playerlogs.py  playerstats.py  teams.py
opponent_adjusted_nba_scraper/: all_game_pace.py  all_player_gamelogs.py  all_team_defense.py  bball_ref_lookup.py  bball_ref_utils.py  constants.py  lookup.py  main.py  names.txt  nba_stats_request_constants.py  nba_stats_utils.py  players.py  referentialize_tables.py  request_constants.py  teams.py  util.py  utils.py
opponent_adjusted_nba_scraper/bball_ref/: br_players.py  br_teams.py  br_utils.py  players.py  teams.py  utils.py
opponent_adjusted_nba_scraper/data/: bball-ref-teams.csv  nba-stats-teams.csv  player_names.csv
opponent_adjusted_nba_scraper/endpoints/: _base.py  playerlogs.py  playerstats.py  teams.py
opponent_adjusted_nba_scraper/nba_stats/: ns_players.py  ns_teams.py  ns_utils.py  players.py  request_constants.py  teams.py  utils.py
opponent_adjusted_nba_scraper/utils/: bball-ref-teams.csv  constants.py  lookup.py  names.txt  teams.py  util.py
src/: main.py
src/bball_ref/: br_players.py  br_teams.py  br_utils.py
src/nba_stats/: ns_players.py  ns_teams.py  ns_utils.py
src/utils/: constants.py  lookup.py  names.txt  util.py
tests/: test_player_stats.py  test_team_stats.py
