[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opponent_adjusted_nba_scraper"
version = "1.0.9"
authors = [
  { name="Oscar Gutierrez Altamirano", email="oscargutierreza617@gmail.com" },
]
dynamic = ["dependencies", "keywords", "license"]

description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
  packages = ["opponent_adjusted_nba_scraper"]